--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/redux-saga": "^0.10.5",
     "classnames": "^2.2.6",
     "fetch-jsonp": "^1.1.3",
+    "moment": "^2.29.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-dropzone": "^10.2.0",
