--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0",
+    "workbox-webpack-plugin": "^6.1.5",
     "zisui": "^1.3.4"
   }
 }
