--- a/package.json
+++ b/package.json
@@ -13,21 +13,24 @@
     "lint": "eslint ./js/**/*"
   },
   "dependencies": {
-    "@material-ui/core": "^4.3.3",
-    "@material-ui/icons": "^4.2.1",
-    "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-redux": "^7.1.2",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.3.1",
+    "@mui/material": "^5.4.0",
+    "@mui/styles": "^5.3.0",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.22",
     "@types/redux-saga": "^0.10.5",
     "classnames": "^2.2.6",
     "fetch-jsonp": "^1.1.3",
     "moment": "^2.29.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-dropzone": "^10.2.0",
-    "react-dropzone-uploader": "^2.10.1",
-    "react-redux": "^7.1.1",
-    "redux": "^4.0.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-dropzone": "^11.5.3",
+    "react-dropzone-uploader": "^2.11.0",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
     "redux-actions": "^2.6.5",
     "redux-saga": "^1.0.5",
     "typesafe-actions": "^4.4.2"
