--- a/package.json
+++ b/package.json
@@ -70,10 +70,11 @@
     "react-docgen-typescript-loader": "^3.3.0",
     "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "reg-suit": "^0.7.23",
-    "terser-webpack-plugin": "^1.4.1",
-    "ts-loader": "^6.0.4",
-    "ts-node": "^8.3.0",
-    "typescript": "^3.6.2",
+    "terser-webpack-plugin": "^5.3.6",
+    "ts-loader": "~8.4.0",
+    "ts-node": "^10.9.1",
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.3",
     "webpack": "^4.39.3",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.7",
