--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "types": ["node"],
-    "target": "esnext",
+    "target": "ES5",
     "allowJs": true,
     "jsx": "react",
     "moduleResolution": "node",
@@ -17,6 +17,6 @@
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": false
   },
-  "include": ["js/**/*"],
+  "include": ["js/**/*", "webpack.config.ts"],
   "exclude": ["node_modules", "build", "acceptance-tests", "webpack", "jest"]
 }
