--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@types/storybook__addon-actions": "^3.4.3",
     "@types/storybook__addon-links": "^3.3.5",
     "@types/storybook__react": "^4.0.2",
-    "@types/terser-webpack-plugin": "^1.2.1",
+    "@types/terser-webpack-plugin": "^5.2.0",
     "@types/webpack": "^4.39.1",
     "@types/webpack-bundle-analyzer": "^2.13.3",
     "@types/webpack-dev-server": "^3.1.7",
@@ -70,7 +70,7 @@
     "react-docgen-typescript-loader": "^3.3.0",
     "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "reg-suit": "^0.7.23",
-    "terser-webpack-plugin": "^5.3.6",
+    "terser-webpack-plugin": "4.2.3",
     "ts-loader": "~8.4.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.4.1",
