--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build-storybook": "build-storybook -s static -c .storybook",
     "pretest-visual": "zisui --serverCmd \"npm run storybook\" http://localhost:9009 -o actual_images",
     "test-visual": "reg-suit run",
-    "lint": "eslint ./js/**/*"
+    "lint": "eslint ./js/**/*.ts ./js/**/*.tsx"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -23,7 +23,7 @@
     "@types/react-redux": "^7.1.22",
     "@types/redux-saga": "^0.10.5",
     "classnames": "^2.2.6",
-    "fetch-jsonp": "^1.1.3",
+    "fetch-jsonp": "^1.3.0",
     "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -36,7 +36,7 @@
     "typesafe-actions": "^4.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
+    "@babel/core": "^7.22.9",
     "@storybook/addon-actions": "^5.1.11",
     "@storybook/addon-links": "^5.1.11",
     "@storybook/cli": "^5.1.11",
@@ -45,36 +45,35 @@
     "@types/copy-webpack-plugin": "^5.0.0",
     "@types/history": "^4.7.3",
     "@types/html-webpack-plugin": "^3.2.1",
-    "@types/node": "^12.7.3",
+    "@types/node": "^20.4.8",
     "@types/react-router-dom": "^4.3.5",
     "@types/redux-actions": "^2.6.1",
     "@types/storybook__addon-actions": "^3.4.3",
     "@types/storybook__addon-links": "^3.3.5",
     "@types/storybook__react": "^4.0.2",
-    "@types/terser-webpack-plugin": "^5.2.0",
     "@types/webpack": "^4.39.1",
     "@types/webpack-bundle-analyzer": "^2.13.3",
     "@types/webpack-dev-server": "^3.1.7",
     "@types/webpack-env": "^1.14.0",
-    "@typescript-eslint/eslint-plugin": "^4.28.0",
-    "@typescript-eslint/parser": "^4.28.0",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.4",
-    "eslint": "^7.29.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint": "^8.46.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "fork-ts-checker-webpack-plugin": "^1.5.0",
     "html-webpack-plugin": "^3.2.0",
-    "prettier": "^2.3.1",
+    "prettier": "^3.0.1",
     "react-docgen-typescript-loader": "^3.3.0",
     "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "reg-suit": "^0.7.23",
     "terser-webpack-plugin": "4.2.3",
     "ts-loader": "~8.4.0",
     "ts-node": "^10.9.1",
-    "tslib": "^2.4.1",
-    "typescript": "^4.9.3",
+    "tslib": "^2.6.1",
+    "typescript": "^5.1.6",
     "webpack": "^4.39.3",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.7",
