--- a/package.json
+++ b/package.json
@@ -2,83 +2,65 @@
   "name": "rta-in-japan-twitter-client",
   "version": "0.0.1",
   "scripts": {
-    "start": "webpack-dev-server -d -w --inline",
-    "build": "webpack -p",
-    "webpack-stat-dev": "webpack -d --config webpack.config.stat.ts",
-    "webpack-stat": "webpack -p --config webpack.config.stat.ts",
-    "storybook": "start-storybook -p 9009 -s static -c .storybook",
-    "build-storybook": "build-storybook -s static -c .storybook",
-    "pretest-visual": "zisui --serverCmd \"npm run storybook\" http://localhost:9009 -o actual_images",
-    "test-visual": "reg-suit run",
+    "start": "webpack serve",
+    "build": "webpack --mode=production",
     "lint": "eslint ./js/**/*.ts ./js/**/*.tsx"
   },
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.3.1",
-    "@mui/material": "^5.4.0",
-    "@mui/styles": "^5.3.0",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-redux": "^7.1.22",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.0",
+    "@mui/material": "^6.1.0",
+    "@mui/styles": "^6.1.0",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-redux": "^7.1.33",
     "@types/redux-saga": "^0.10.5",
-    "classnames": "^2.2.6",
+    "classnames": "^2.5.1",
     "fetch-jsonp": "^1.3.0",
-    "moment": "^2.29.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-dropzone": "^11.5.3",
+    "moment": "^2.30.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-dropzone-uploader": "^2.11.0",
-    "react-redux": "^7.2.6",
-    "redux": "^4.1.2",
-    "redux-actions": "^2.6.5",
-    "redux-saga": "^1.0.5",
-    "typesafe-actions": "^4.4.2"
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "redux-actions": "^3.0.3",
+    "redux-saga": "^1.3.0",
+    "typesafe-actions": "4.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.9",
-    "@storybook/addon-actions": "^5.1.11",
-    "@storybook/addon-links": "^5.1.11",
-    "@storybook/cli": "^5.1.11",
-    "@storybook/react": "^5.1.11",
-    "@types/classnames": "^2.2.9",
+    "@babel/core": "^7.25.2",
     "@types/copy-webpack-plugin": "^5.0.0",
-    "@types/history": "^4.7.3",
-    "@types/html-webpack-plugin": "^3.2.1",
-    "@types/node": "^20.4.8",
-    "@types/react-router-dom": "^4.3.5",
-    "@types/redux-actions": "^2.6.1",
-    "@types/storybook__addon-actions": "^3.4.3",
-    "@types/storybook__addon-links": "^3.3.5",
-    "@types/storybook__react": "^4.0.2",
-    "@types/webpack": "^4.39.1",
-    "@types/webpack-bundle-analyzer": "^2.13.3",
-    "@types/webpack-dev-server": "^3.1.7",
+    "@types/html-webpack-plugin": "^3.2.9",
+    "@types/node": "^22.5.5",
+    "@types/redux-actions": "^2.6.5",
+    "@types/webpack": "^5.28.5",
     "@types/webpack-env": "^1.14.0",
-    "@typescript-eslint/eslint-plugin": "^6.2.1",
-    "@typescript-eslint/parser": "^6.2.1",
-    "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.4",
-    "eslint": "^8.46.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "fork-ts-checker-webpack-plugin": "^1.5.0",
-    "html-webpack-plugin": "^3.2.0",
-    "prettier": "^3.0.1",
-    "react-docgen-typescript-loader": "^3.3.0",
-    "react-docgen-typescript-webpack-plugin": "^1.1.0",
-    "reg-suit": "^0.7.23",
-    "terser-webpack-plugin": "4.2.3",
-    "ts-loader": "~8.4.0",
-    "ts-node": "^10.9.1",
-    "tslib": "^2.6.1",
-    "typescript": "^5.1.6",
-    "webpack": "^4.39.3",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.7",
-    "webpack-dev-server": "^3.8.0",
-    "workbox-webpack-plugin": "^6.1.5",
-    "zisui": "^1.3.4"
+    "@typescript-eslint/eslint-plugin": "^8.5.0",
+    "@typescript-eslint/parser": "^8.5.0",
+    "babel-loader": "^9.1.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^7.1.2",
+    "eslint": "^9.10.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-html": "^8.1.1",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.36.1",
+    "fork-ts-checker-webpack-plugin": "^9.0.2",
+    "globals": "^15.9.0",
+    "html-webpack-plugin": "^5.6.0",
+    "prettier": "^3.3.3",
+    "style-loader": "^4.0.0",
+    "terser-webpack-plugin": "5.3.10",
+    "ts-loader": "~9.5.1",
+    "ts-node": "^10.9.2",
+    "tslib": "^2.7.0",
+    "typescript": "^5.6.2",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0",
+    "workbox-webpack-plugin": "^7.1.0"
   }
 }
